XSS Filter, Log Source, MongoDB Hospital app

--- a/BE/admin-app/src/main/resources/application.properties
+++ b/BE/admin-app/src/main/resources/application.properties
@@ -23,7 +23,7 @@ security.require-ssl=true
 #server.ssl.trust-store-type=JKS
 #server.ssl.client-auth=want
 
-trust.store=src/main/resources/certificates/server_admin.pfx
+trust.store=src/main/resources/static/jks/trustStore.jks
 trust.store.password=vukovic
 
 bob.store=src/main/resources/public_keys/server.crt
