--- a/BE/hospitalapp/src/main/resources/application.properties
+++ b/BE/hospitalapp/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/pegasus_hospital
 spring.datasource.username=kts
 spring.datasource.password=kts.nvt17
 
+spring.data.mongodb.uri=mongodb+srv://kts:kts.nvt17@cluster-vukovic.ssf51.mongodb.net/pegasus_ms?retryWrites=true&w=majority
+
 server.port = ${PORT:8081}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
